Refactor configuration and enhance logging features
- Updated `.gitignore` to include `$RECYCLE.BIN/`.
- Added `AppSettings` class for managing application paths.
- Introduced `IAppSettings` interface for path definitions.
- Refactored `Index.cshtml` and `Index.cshtml.cs` for improved log display and dependency injection.
- Cleaned up `_Layout.cshtml` and modified `launchSettings.json`.
- Updated `Program.cs` to register `AppSettings` as a singleton.
- Enhanced `MainBackgroundService` and `VideoProcessorService` to utilize `IAppSettings`.
- Created `FileNamer` class for unique file path generation.
- Updated `GlobUtils` for filename uniqueness.
- Modified `appsettings.Development.json` and `appsettings.json` to reflect new settings structure.

--- a/GrinVideoEncoder.csproj
+++ b/GrinVideoEncoder.csproj
@@ -15,6 +15,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="publish\**" />
+    <Compile Remove="temp\**" />
+    <Content Remove="publish\**" />
+    <Content Remove="temp\**" />
+    <EmbeddedResource Remove="publish\**" />
+    <EmbeddedResource Remove="temp\**" />
+    <None Remove="publish\**" />
+    <None Remove="temp\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
