--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,29 +1,38 @@
 {
 	"DetailedErrors": true,
-	"Logging": {
-		"LogLevel": {
-			"Default": "Information",
-			"Microsoft.AspNetCore": "Warning"
-		}
+	"Settings": {
+		"InputPath": "./temp/input",
+		"ProcessingPath": "./temp/processing",
+		"OutputPath": "./temp/output",
+		"FailedPath": "./temp/failed",
+		"TempPath": "./temp/temp",
+		"TrashPath": "./temp/trash",
+		"LogPath": "./temp/logs"
 	},
-	"Folders": {
-		"Input": "./temp/input",
-		"Processing": "./temp/processing",
-		"Output": "./temp/output",
-		"Failed": "./temp/failed",
-		"Temp": "./temp/temp"
-	},
-	"FFmpegPath": "ffmpeg",
 	"Serilog": {
+		"MinimumLevel": {
+			"Default": "Debug",
+			"Override": {
+				"Microsoft": "Warning",
+				"System": "Warning"
+			}
+		},
 		"WriteTo": [
 			{ "Name": "Console" },
 			{
 				"Name": "File",
 				"Args": {
-					"path": "./temp/logs/log.txt",
+					"path": "./temp/logs/GrinVideoEncoder.log",
 					"rollingInterval": "Day"
 				}
 			}
 		]
+	},
+	"Kestrel": {
+		"Endpoints": {
+			"Http": {
+				"Url": "http://localhost:5000"
+			}
+		}
 	}
 }
