--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,38 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	//"Logging": {
+	//	"LogLevel": {
+	//		"Default": "None",
+	//		"Microsoft": "Warning",
+	//		"Microsoft.EntityFrameworkCore": "Warning",
+	//		"Microsoft.AspNetCore": "None",
+	//		"Microsoft.AspNetCore.Mvc": "None",
+	//		"Microsoft.AspNetCore.Routing": "None",
+	//		"Microsoft.AspNetCore.Mvc.RazorPages": "None",
+	//		"Microsoft.AspNetCore.Mvc.ModelBinding": "None",
+	//		"Microsoft.AspNetCore.Authorization": "None",
+	//		"Microsoft.AspNetCore.Hosting": "None",
+	//		"Microsoft.AspNetCore.Http": "None",
+	//		"Microsoft.AspNetCore.HttpsPolicy": "None",
+	//		"Microsoft.AspNetCore.Identity": "None",
+	//		"Microsoft.AspNetCore.Localization": "None",
+	//		"Microsoft.AspNetCore.Mvc.Abstractions": "None",
+	//		"Microsoft.AspNetCore.Mvc.ApiExplorer": "None",
+	//		"Microsoft.AspNetCore.Mvc.Core": "None",
+	//		"Microsoft.AspNetCore.Mvc.Cors": "None",
+	//		"Microsoft.AspNetCore.Mvc.DataAnnotations": "None",
+	//		"Microsoft.AspNetCore.Mvc.Formatters": "None",
+	//		"Microsoft.AspNetCore.Mvc.Localization": "None",
+	//		"Microsoft.AspNetCore.Mvc.Razor": "None",
+	//		"Microsoft.AspNetCore.Mvc.TagHelpers": "None",
+	//		"Microsoft.AspNetCore.Mvc.ViewFeatures": "None",
+	//		"Microsoft.AspNetCore.ResponseCaching": "None",
+	//		"Microsoft.AspNetCore.Server": "None",
+	//		"Microsoft.AspNetCore.Server.IIS": "None",
+	//		"Microsoft.AspNetCore.Server.Kestrel": "None",
+	//		"Microsoft.AspNetCore.SignalR": "None",
+	//		"Microsoft.AspNetCore.StaticFiles": "None",
+	//		"Microsoft.Hosting.Lifetime": "Warning"
+	//	}
+	//},
+	"AllowedHosts": "*"
 }
-
-
-
