Set bitrate as a parameter

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,7 +7,9 @@
 		"FailedPath": "./temp/failed",
 		"TempPath": "./temp/temp",
 		"TrashPath": "./temp/trash",
-		"LogPath": "./temp/logs"
+		"LogPath": "./temp/logs",
+		"BitrateKbS": 3000,
+		"ForceCpu": true
 	},
 	"Serilog": {
 		"MinimumLevel": {
