Add cancel feature

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -9,7 +9,7 @@
 		"TrashPath": "./temp/trash",
 		"LogPath": "./temp/logs",
 		"BitrateKbS": 3000,
-		"ForceCpu": true
+		"ForceCpu": false
 	},
 	"Serilog": {
 		"MinimumLevel": {
