Improve FFmpeg validation, video indexing, and config options
- Make VideoFile.Duration nullable to handle missing metadata
- Add FFmpeg download and runtime validation on startup
- Refactor GetVideoDuration to static, nullable, with error logging
- Update VideoIndexerService to use new duration logic
- Expand appsettings.Development.json with video options
  (QualityLevel, IndexerPath, DatabasePath, VideoExtensions, MinFileSizeMB)
- Improve exception handling for FFmpeg and video duration
- Enhance robustness for video processing and indexing

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -9,7 +9,20 @@
 		"TrashPath": "./temp/trash",
 		"LogPath": "./temp/logs",
 		"BitrateKbS": 3000,
-		"ForceCpu": false
+		"ForceCpu": false,
+		"QualityLevel": 23,
+		"IndexerPath": "V:\\Films",
+		"DatabasePath": "./temp/videoindex.db",
+		"VideoExtensions": [
+			".mp4",
+			".mkv",
+			".avi",
+			".mov",
+			".wmv",
+			".flv",
+			".webm"
+		],
+		"MinFileSizeMB": 100
 	},
 	"Serilog": {
 		"MinimumLevel": {
