--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,18 +1,11 @@
 {
 	"DetailedErrors": true,
 	"Settings": {
-		"InputPath": "./temp/input",
-		"ProcessingPath": "./temp/processing",
-		"OutputPath": "./temp/output",
-		"FailedPath": "./temp/failed",
-		"TempPath": "./temp/temp",
-		"TrashPath": "./temp/trash",
-		"LogPath": "./temp/logs",
+		"WorkPath": "./temp",
 		"BitrateKbS": 3000,
 		"ForceCpu": false,
 		"QualityLevel": 23,
 		"IndexerPath": "V:\\Films",
-		"DatabasePath": "./temp/videoindex.db",
 		"VideoExtensions": [
 			".mp4",
 			".mkv",
@@ -22,31 +15,12 @@
 			".flv",
 			".webm"
 		],
-		"MinFileSizeMB": 100
-	},
-	"Serilog": {
-		"MinimumLevel": {
-			"Default": "Debug",
-			"Override": {
-				"Microsoft": "Warning",
-				"System": "Warning"
-			}
-		},
-		"WriteTo": [
-			{ "Name": "Console" },
-			{
-				"Name": "File",
-				"Args": {
-					"path": "./temp/logs/GrinVideoEncoder.log",
-					"rollingInterval": "Day"
+		"MinFileSizeMB": 100,
+		"Kestrel": {
+			"Endpoints": {
+				"Http": {
+					"Url": "http://localhost:5000"
 				}
-			}
-		]
-	},
-	"Kestrel": {
-		"Endpoints": {
-			"Http": {
-				"Url": "http://localhost:5000"
 			}
 		}
 	}
