Add environment configs, improve logging & video checks
Introduce environment-specific config files and update launch profiles for Films, Lab, and Rush scenarios. Refactor AppSettings to remove BitrateKbS and rely on config for VideoExtensions. Enhance Serilog logging with file and console outputs using environment log paths. Improve video quality ratio calculations for frame rate normalization. Increase re-encode threshold and add stricter checks for frame rate consistency. Remove redundant log statement in VideoIndexerService.

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,7 @@ _NCrunch*
 /.vs
 /temp
 /.config
+/appsettings.Films.json
+/appsettings.Lab.json
+/appsettings.Rush.json
+/Properties/launchSettings.json
