Refactor video processing workflow, add PreventSleep service
- Replace VideoToProcess stack with DB status tracking and async queries
- Update UI and background services to use new DB workflow
- Add PreventSleep background service for system sleep management
- Improve error handling, status transitions, and context menu actions
- Enhance Dashboard with volume/trash info via VolumeManagent
- Enable SQLite WAL mode for better concurrency
- Exclude publish folder from build; set embedded debug type
- General code cleanup and robustness improvements

--- a/GrinVideoEncoder.csproj
+++ b/GrinVideoEncoder.csproj
@@ -10,11 +10,20 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <NoWarn>1701;1702;S112;S6667</NoWarn>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <NoWarn>1701;1702;S112;S6667</NoWarn>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="publish\**" />
+    <Content Remove="publish\**" />
+    <EmbeddedResource Remove="publish\**" />
+    <None Remove="publish\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.0-preview.4.25258.110" />
