--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,8 @@ _NCrunch*
 /.vs
 /temp
 /.config
+/appsettings.Films.json
+/appsettings.Lab.json
+/appsettings.Rush.json
+/Properties/launchSettings.json
+/run_Rush.bat
